--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@ h4{color:lightpink;}
 
 <h5> tldr </h5>
 <p > <b>Always depend on yourself</b> </p>
-<a href="https://github.com/Sali-Almurshidi/markdown-to-html-">previous</a>
+<a href="https://sali-almurshidi.github.io/markdown-warmup-css/">previous</a>
 Samira
-<a href="https://sinemhekimoglu1998.github.io/markdown-to-html/">next</a>
+<a href="https://sinemhekimoglu1998.github.io/markdown-to-css/">next</a>
 
 
 </body>
